# High-load-system

./: .gitignore  Dockerfile  README.MD  README.md  docker-compose.yaml  main.py  nginx.conf  pyproject.toml
cpu_server/: Dockerfile  README.MD  docker-compose.yaml  main.py  main_no_psql.py  nginx.conf  pyproject.toml
cpu_server/config/nginx/: nginx.conf
cpu_server/config/static-server/: nginx.conf
cpu_server/k8s/: fastapi-deployment.yaml  fastapi-service.yaml  nginx-deployment.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml
cpu_server/k8s/config/: nginx-configmap.yaml
cpu_server/k8s/config/nginx/: nginx.conf
cpu_server/k8s/config/postgresql/: init.sql
distributed_systems/: Dockerfile  README.MD  main.py  pyproject.toml
generative_models_ai/: README.md
generative_models_ai/hw_1/: DL_2Y_homework_1_iugai_Danila.ipynb
generative_models_ai/hw_2/: DL_2Y_homework_2_Iugai_Danila.ipynb
generative_models_ai/hw_3/: GenModel_HW3_Iugai_Danila.ipynb
gpu_server/: Dokerfile  README.MD  main.py  main_no_psql.py  pyproject.toml
gpu_server/k8s/: model-fastapi-deployment.yaml  model-fastapi-service.yaml
subject_machine_learning/: README.MD
subject_machine_learning/hw_1/: README.md
subject_machine_learning/hw_2/: HW2_Logistic_regression_Iugai_Danila.ipynb  README.md
subject_machine_learning/hw_3/: README.MD
subject_machine_learning/hw_4/: README.MD
subject_machine_learning/hw_5/: README.MD
subject_machine_learning/hw_6/: Iugai_Hometask6.ipynb  README.MD
