[project]
name = "graditude"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow (>=2.20.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "aiohttp-jinja2 (>=1.6,<2.0)",
    "pika (>=1.3.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
