[tool.poetry]
name = "graditude"
version = "0.1.0"
description = ""
authors = ["Dan <danila.vu@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
mlflow = ">=2.20.1,<3.0.0"
requests = ">=2.32.3,<3.0.0"
aiohttp = ">=3.11.12,<4.0.0"
aiohttp-jinja2 = ">=1.6,<2.0"
pika = ">=1.3.2,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
aio-pika = ">=9.5.4,<10.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
uuid = ">=1.30,<2.0"
asyncio = ">=3.4.3,<4.0.0"
asyncpg = "^0.30.0"
databases = "^0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"